Format UpdateData component

--- a/public/global.css
+++ b/public/global.css
@@ -15,8 +15,11 @@ body {
 	font-weight: bold;
 }
 
-.rotate-anim {
+.mr-15 {
 	margin-right: 15px;
+}
+
+.rotate-anim {
 	animation: rotate 1s;
 	-moz-animation: rotate 1s infinite;
 	-webkit-animation: rotate 1s infinite;
