--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -11,7 +11,7 @@ body {
 	display: flex;
 	min-height: 100vh;
 	flex-direction: column;
-	background-color: var(--background-color-primary);
+	background-color: var(--color-background);
 }
 
 #search-results li.move.active {
