--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,7 +4,7 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	transition: background-color 0.2s, color 0.2s ease-in-out;
+	transition: background-color 0.2s, color 0.2s ease-in-out !important;
 }
 
 body {
