Translated collections to scss theme

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -6,6 +6,7 @@
   --color-foreground: #bbb7b7;
   --color-background: #fff;
   --color-background2: #e57373;
+  --color-background3: #fff;
 }
 
 [data-theme="dark"] {
@@ -16,4 +17,5 @@
   --color-heading: #cecece;
   --color-background: #181818;
   --color-background2: #252525;
+  --color-background3: #252525;
 }
