Fix skin filter modal; Translate color in cardlist

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -6,7 +6,7 @@
   --color-foreground: #bbb7b7;
   --color-background: #fff;
   --color-background2: #e57373;
-  --color-background3: #fff;
+  --color-background3: #ede8e8;
 }
 
 [data-theme="dark"] {
